FreeRADIUS 2.0.0 ; $Date$, urgency=low
	* Permit per-socket list of clients in "listen" directives
	* Faster client lookups, to permit scaling to 10^6 or more clients.
	* Removed radrelay and radsqlrelay.  See "man radrelay.conf" for
	  details.
	* Full IPv6 support.  The server can listen on IPv6 sockets,
	  and send/receive IPv6 packets.
	* rlm_ns_mta_md5 is deprecated.  rlm_pap does everything it does,
	  and more.
	* The command-line options "-i ipaddr" and "-p port" now work.
	* rlm_unix no longer reads /etc/passwd (etc.) directly.  See
	  "man rlm_unix" for details.  Also see the "authorize" section
	   of "radiusd.conf".
	* Configuration files now use binary trees, which means that
	  arbitrary amounts of information can be stored in them.
	* Fixed xlat's for %{config:...}.  Dynamic expanstion now works
	  better, so %{config:section.subsection.%{User-Name}.item" works,
	  even if the User-Name contains periods.  This is a cheap way
	  of getting in-memory databases, as anything can be put into
	  the configuration files.
	* Fix locking issues for radrelay.
	* Add radsqlrelay, which works like radrelay, but reads data
	  from an SQL database.
	* rlm_ldap now auto-discovers password headers.  See the "ldap"
	  subsection of "modules", in "radiusd.conf" for details.
	* rlm_pap now auto-discovers password encryption/hash methods.
	  See "man rlm_pap" and the "authorize" section of "radiusd.conf".
	* Don't call exit() if module instantiation files.
	* "virtual" modules can now be used.  See the last bit of the
	  "instantiate" section in "radiusd.conf".
	* Fix problems with Exec-Program-Wait & forking issues.
	* Configuration files can now "$INCLUDE directory/", to automatically
	  load all files in that directory.  Use with caution!
	* Fix for log_dest = stdout/stderr.
	* New "policy" module, which has none of the limitations of the
	  "users" file.  See "man rlm_policy" for details.
	* rlm_sql can now behave more like the "users" file.