@@ -136,9 +136,9 @@ static int cram_authenticate(UNUSED void * instance, REQUEST *request)
 	VALUE_PAIR *authtype, *challenge, *response, *password;
 	char buffer[64];
 
-	password = pairfind(request->config_items, PW_PASSWORD);
+	password = pairfind(request->config_items, PW_CLEARTEXT_PASSWORD);
 	if(!password) {
-		radlog(L_AUTH, "rlm_cram: Password is not configured for user");
+		radlog(L_AUTH, "rlm_cram: Cleartext-Password is required for authentication.");
 		return RLM_MODULE_INVALID;
 	}
 	authtype = pairfind(request->packet->vps, SM_AUTHTYPE);
