@@ -114,10 +114,10 @@ static int leap_authenticate(UNUSED void *instance, EAP_HANDLER *handler)
 	 *	The password is never sent over the wire.
 	 *	Always get the configured password, for each user.
 	 */
-	password = pairfind(handler->request->config_items, PW_PASSWORD);
+	password = pairfind(handler->request->config_items, PW_CLEARTEXT_PASSWORD);
 	if (!password) password = pairfind(handler->request->config_items, PW_NT_PASSWORD);
 	if (!password) {
-		radlog(L_INFO, "rlm_eap_leap: No User-Password or NT-Password configured for this user");
+		radlog(L_INFO, "rlm_eap_leap: No Cleartext-Password or NT-Password configured for this user");
 		eapleap_free(&packet);
 		return 0;
 	}
